--- a/app.css
+++ b/app.css
@@ -2,8 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Goldman&display=swap');
 
 :root {
-    --metal-red: linear-gradient(to right, #310202, #6A0F0F, #310202);
-    --metal-red-hover: linear-gradient(to right, #310202, #6A0F0F 20%, #310202);
+    --metal-red: linear-gradient(to right, #310202 0% 25%, #6A0F0F 50%, #310202 75% 100%);
     --metal-grey: linear-gradient(#3C3C3C, #FFFFFF, #3C3C3C);
     --metal-grey-light: linear-gradient(to right, #D9D9D9, #B9B9B9)
 }
@@ -15,7 +14,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image:linear-gradient(#021018,#202C33,#374249);         
+    background-image:linear-gradient(#021018,#202C33,#374249);
 }
 
 a, p, label, h1, h2, h3, h4 {
@@ -30,9 +29,40 @@ h2 {
     background-clip: text;
 }
 
+label {
+    display: block;
+    color: white;
+}
+
+input, textarea {
+    background-image: var(--metal-grey-light);
+    border: none;
+    border-radius: 2px;
+    width: 100%;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 4px 4px inset;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+textarea::placeholder {
+    line-height: 2rem;
+}
+
+input {
+    height: 3em;
+}
+
+textarea {
+    height: 5em;
+    resize: vertical;
+    max-height: 50rem;
+    min-height: 1em;
+    width: 100%;
+}
+
 
 button {
     cursor: pointer;
+    padding: 0;
 }
 
 
@@ -85,13 +115,15 @@ li {
     border: solid 1px white;
     border-radius: 10px;
     background-image: var(--metal-red);
+    background-size: 200% 100%;
+    background-position: 50% 0;
     color: white;
     font-family: 'Goldman';
-    transition: all 300ms ease;
+    transition: all 200ms ease-out;
 }
 
 .button:hover {
-    background: var(--metal-red-hover);
+    background-position: 80% 0;
 }
 
 .img {
@@ -113,6 +145,7 @@ header {
     height: 5rem;
     width: 100%;
     position: absolute;
+    margin-top: 1rem;
 }
 
 header li > a, header li > button {
@@ -134,17 +167,6 @@ header > nav {
     justify-content: flex-start;
     font-size: 1em;
     color: white;
-}
-
-@media screen and (min-width: 1024px) {
-    header > nav,
-    header button.no-button {
-        font-size: 2vw;
-    }
-
-    header .img {
-        width: 5vw;
-    }
 }
 
 header > nav > div {
@@ -289,7 +311,7 @@ footer {
     color: #ffffff;
 }
 
-#connections {
+.connections {
     width: 350px;
     justify-content: space-between;
     margin: auto;
@@ -297,14 +319,14 @@ footer {
     margin-top: 2rem;
 }
 
-#connections a {
+.connections a {
     width: calc(100% / 7);
     max-width: 50px;
     position: relative;
-    padding: 0 1rem;
+    margin: 0 1rem;
 }
 
-#connections a img {
+.connections a img {
     width: 100%;
     bottom: 0;
 }
@@ -313,32 +335,17 @@ footer hr {
     border-color: #282828;
 }
 
-label {
-    display: block;
-    color: white;
+@media screen and (min-width: 1024px) {
+    header > nav,
+    header button.no-button {
+        font-size: calc(1rem + .5vw);
+    }
+
+    header .img {
+        width: 5vw;
+    }
 }
 
-input, textarea {
-    background-image: var(--metal-grey-light);
-    border: none;
-    border-radius: 2px;
-    width: 100%;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 4px 4px inset;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-textarea::placeholder {
-    justify-items:center ;
-}
-
-input {
-    height: 3em;
-}
-
-textarea {
-    height: 5em;
-    resize: vertical;
-    max-height: 30rem;
-    min-height: 1em;
-    width: 100%;
+@media screen and (max-width: 768px) {
+    
 }
