--- a/app.css
+++ b/app.css
@@ -30,7 +30,7 @@ a, p, label, h1, h2, h3, h4 {
     outline: none;
 }
 
-h1, h2 {
+h2, h3 {
     background-image: var(--metal-grey);
     -webkit-text-fill-color: transparent;
     background-clip: text;
@@ -66,12 +66,10 @@ textarea {
     width: 100%;
 }
 
-
 button {
     cursor: pointer;
     padding: 0;
 }
-
 
 a:-webkit-any-link {
     color: white;
@@ -196,23 +194,30 @@ li {
     max-width: 1300px;
     padding: 20px;
 }
-  .card-container {
-    max-width: 5%;
-    margin: 50px auto;
+.card-container {
+max-width: 5%;
+margin: 50px auto;
+display: flex;
+flex-wrap: wrap;
+gap: 25px;
+}
+
+.card{
+background-color: #000000;
+border-radius: 10px;
+box-shadow: 0 0 10px;
+}
+
+.card img{
+background-image: url(pics/no-photo.jpg);
+width: 406px;
+height: 406px; 
+}
+
+.carousel-tabs {
     display: flex;
-    flex-wrap: wrap;
-    gap: 25px;
-  }
-  .card{
-    background-color: #000000;
-    border-radius: 10px;
-    box-shadow: 0 0 10px;
-  }
-  .card img{
-    background-image: url(pics/no-photo.jpg);
-    width: 406px;
-    height: 406px; 
-  }
+    justify-content: space-between;
+}
   
 /*------------------------*/
 
@@ -223,6 +228,11 @@ header {
     width: 100%;
     position: absolute;
     margin-top: 1rem;
+}
+
+.navlogo h1 {
+    position: fixed;
+    text-indent: 9999px;
 }
 
 header button.no-button {
@@ -245,7 +255,7 @@ header li > a, header li > button {
 
 header li:hover:not(:focus-within) > a,
 header li:focus-within > a {
-    color: #670E0E;
+    color: #c90000;
 }
 
 header > nav {
@@ -324,25 +334,42 @@ ul li ul:hover {
 /*--------------*/
 
 
-#hero {
+.hero {
     display: flex;
     height: 90vh;
     background-image: url("pics/car-orange-cloudy.png");
-    z-index: -1;
+    z-index: -2;
     justify-content: center;
     padding-bottom: 5rem;
 }
 
-#hero article h1 {
-    font-size: calc(2rem + 2vw);
-    margin-bottom: 0
+.hero article {
+    z-index: 1;
 }
 
-#hero article p {
+.hero article h2 {
+    font-size: calc(2rem + 2vw);
+    margin-bottom: 0;
+    position: relative;
+}
+
+.hero article h2:before {
+    position: absolute;
+    content: "";
+    left: 5%;
+    right: 5%;
+    top: 50%;
+    height: 0;
+    background-color: black;
+    z-index: -1;
+    box-shadow: 0 0 40px 40px rgba(0, 0, 0, 0.608);
+}
+
+.hero article p {
     font-size: calc(1rem + .4vw);
 }
 
-#hero article a {
+.hero article a {
     font-size: calc(1rem + .5vw);
     margin-top: 2rem;
 }
