--- a/app.css
+++ b/app.css
@@ -331,16 +331,24 @@ ul li ul:hover {
     height: 50px;
 }
 
+section[role=hero] {
+    overflow-x: hidden;
+}
+
 /*--------------*/
 
 
 .hero {
     display: flex;
     height: 90vh;
-    background-image: url("pics/car-orange-cloudy.png");
+    width: 100vw;
+    min-width: 100vw;
     z-index: -2;
     justify-content: center;
     padding-bottom: 5rem;
+    animation: 1s infinite ease-in-out, 1s infinite ease-in-out;
+    animation-name: carousel-2-2, carousel-2-1;
+    animation-delay: 1s, 2s;
 }
 
 .hero article {
@@ -499,8 +507,16 @@ footer hr {
 }
 /*--------------*/
 
-/*-------Large-------*/
+/*-------Ids-------*/
 
+#home .hero:nth-of-type(1) {
+    background-image: url("pics/car-orange-cloudy.png");
+}
+#home .hero:nth-of-type(2) {
+    background-image: url("pics/car-black-blue-bg.jpg");
+}
+
+/*-----------------*/
 
 /*-------Mobile/Tablet-------*/
 @media screen and (max-width: 768px) {
@@ -595,7 +611,7 @@ footer hr {
         animation: dropdown-open-mobile 200ms ease-out forwards;
     }
     
-    #hero {
+    .hero {
         height: 70vh;
         background-size: cover;
         background-position: top;
@@ -684,4 +700,24 @@ footer hr {
 @keyframes hidden {
     0% {display: none;}
     100% {display: none;}
+}
+
+@keyframes carousel-2-1 {
+    0% {
+        transform: translateX(0%);
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+@keyframes carousel-2-2 {
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(0%);
+    }
 }
