--- a/app.css
+++ b/app.css
@@ -225,8 +225,8 @@ li {
 }
 
 .carousel-container {
-    animation: 1s infinite ease-in-out carousel-transition;
-    animation-delay: .9s;
+    animation: calc(1s * 4) infinite ease-in-out carousel-transition;
+    animation-delay: calc(.9s * 4);
 }
 
 .carousel-tabs {
@@ -235,23 +235,19 @@ li {
 }
 
 .carousel_2 {
-    animation: 2s infinite ease-in-out carousel-2;
+    animation: calc(2s * 4) infinite ease-in-out carousel-2;
 }
 
 div[class*=carousel_] {
     position: relative;
 }
 
-div[class*=carousel_]:nth-of-type(1) {
-    animation-delay: 0s;
-}
-
 div[class*=carousel_]:nth-of-type(2) {
-    animation-delay: 1s;
+    animation-delay: calc(1s * 4);
 }
 
 div[class*=carousel_]:nth-of-type(3) {
-    animation-delay: 2s;
+    animation-delay: calc(2s * 4);
 }
   
 /*------------------------*/
@@ -382,6 +378,7 @@ section[role=hero] {
     min-width: 100vw;
     justify-content: center;
     padding-bottom: 5rem;
+    background-position: bottom;
 }
 
 .hero article {
@@ -735,25 +732,27 @@ footer hr {
 }
 
 @keyframes carousel-2 {
-    0%, 49.9% {
+    0%, 49.99%{
         order: 0;
+        visibility: visible;
     }
 
     50%, 100% {
         order: 1;
+        visibility: hidden;
     }
 }
 
 @keyframes carousel-transition {
     0% {
-        filter: brightness(100%);
+        filter: none;
     }
 
-    10% {
-        filter: brightness(0%);
+    8%, 12% {
+        filter: brightness(0%) blur(2px);
     }
 
     20%, 100% {
-        filter: brightness(100%);
+        filter: none;
     }
 }
