--- a/app.css
+++ b/app.css
@@ -267,13 +267,20 @@ section.slanted.img-left {
 .card {
     background-color: #c4c4c4;
     box-shadow: 0 0 10px;
-    font-size: 24px;
+    font-size: 17px;
 }
 
 .card img{
     background-image: url("pics/no-photo.jpg");
-    width: 406px;
-    height: 406px; 
+    width: 304px;
+    height: auto; 
+}
+
+.first-4{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 .rich-img{
