--- a/app.css
+++ b/app.css
@@ -16,7 +16,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image:linear-gradient(#021018,#202C33,#374249);
+    background-color: #000000;
 }
 
 a, p, label, h1, h2, h3, h4 {
@@ -328,21 +328,29 @@ section.slanted.img-left {
     align-items: center; 
 }
 .h2-contact{
+    background-color: #000000;
     display: flex;
     justify-content: center;
-    font-size: 96px;  
+    font-size: 80px; 
+    padding-top: 10rem; 
 }
 
 .contact-info{
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    background-color: #313B40;
-    font-size: 24px;
+    font-size: 30px;
     width: 577px;
     height: auto;
-    padding: 10px;
-    margin: 20px;
+}
+.contact-us-main {
+    background-color: #000000;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: auto;
+    height: 25rem;
 }
 
 .customize-page{
@@ -376,11 +384,11 @@ section.slanted.img-left {
 }
 .customize-p{
     display: flex;
-    justify-content: flex-end;
-    padding-right: 60px;
-    font-size: xx-large;
-    transform: translateY(-6rem);
+    flex-direction: row;
+    justify-items: space-between;
+    align-items: center;
 }
+
 
 .carousel-container {
     animation: calc(1s * 4) infinite ease-in-out carousel-transition;
@@ -591,12 +599,6 @@ section[role=hero] {
     z-index: -1;  
 }
 
-#contact-us-main {
-    display: flex;
-    margin-top: 2rem;
-    justify-content: space-between;
-    transform: translateY(10rem)
-}
 /*-------Footer-------*/
 #to-top {
    display: flex;
